--- a/index.html
+++ b/index.html
@@ -11,13 +11,13 @@
         <h1>🎯 LeetMetric</h1>
         <p class="subtitle">Track your LeetCode journey with style</p>
 
-        <!-- <div class="info-banner">
+        <div class="info-banner">
             <strong>⚠️ CORS Notice:</strong>
             This app requires CORS access to fetch LeetCode data. To use it:
             <br>• <strong>Option 1:</strong> Visit <a href="https://cors-anywhere.herokuapp.com/corsdemo" target="_blank">CORS Anywhere Demo</a> and request temporary access
             <br>• <strong>Option 2:</strong> Use a CORS browser extension (like "CORS Unblock")
             <br>• <strong>Option 3:</strong> Set up your own backend proxy for production use
-        </div> -->
+        </div>
 
         <div class="user-container">
             <p>Enter your LeetCode username:</p>
